---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "const N := 3\nvar c : char\nvar c1 : char(1)\nvar c3 : char(3)\nvar s : string\nvar s1 : string(1)\nvar s3 : string(3)\nvar s5 : string(5)\n\nvar _v00 : string(N) := c\nvar _v01 : string(N) := c1\nvar _v03 : string(N) := c3\nvar _v05 : string(N) := s % runtime checked\nvar _v02 : string(N) := s1\nvar _v04 : string(N) := s3\nvar _v06 : string(N) := s5 % runtime checked\n"
---
"N"@"src/main.t:6..7" [ConstVar(Const, No)]: int
"c"@"src/main.t:17..18" [ConstVar(Var, No)]: char
"c1"@"src/main.t:30..32" [ConstVar(Var, No)]: char_n Fixed(Unevaluated(PackageId(0), BodyId(1)))
"c3"@"src/main.t:47..49" [ConstVar(Var, No)]: char_n Fixed(Unevaluated(PackageId(0), BodyId(2)))
"s"@"src/main.t:64..65" [ConstVar(Var, No)]: string
"s1"@"src/main.t:79..81" [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(0), BodyId(3)))
"s3"@"src/main.t:98..100" [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(0), BodyId(4)))
"s5"@"src/main.t:117..119" [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(0), BodyId(5)))
"_v00"@"src/main.t:137..141" [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(0), BodyId(6)))
"_v01"@"src/main.t:163..167" [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(0), BodyId(8)))
"_v03"@"src/main.t:190..194" [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(0), BodyId(10)))
"_v05"@"src/main.t:217..221" [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(0), BodyId(12)))
"_v02"@"src/main.t:261..265" [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(0), BodyId(14)))
"_v04"@"src/main.t:288..292" [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(0), BodyId(16)))
"_v06"@"src/main.t:315..319" [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(0), BodyId(18)))
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
